// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`inspect.table { a: 1, b: 2 } 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ a       │ 1      │
│ b       │ 2      │
└─────────┴────────┘
"
`;

exports[`inspect.table { a: 1, b: 2, c: 3 } 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ a       │ 1      │
│ b       │ 2      │
│ c       │ 3      │
└─────────┴────────┘
"
`;

exports[`inspect.table { a: 1, b: 2, c: 3, d: 4 } 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ a       │ 1      │
│ b       │ 2      │
│ c       │ 3      │
│ d       │ 4      │
└─────────┴────────┘
"
`;

exports[`inspect.table Map(2) { "a": 1, "b": 2 } 1`] = `
"┌───────────────────┬─────┬────────┐
│ (iteration index) │ Key │ Values │
├───────────────────┼─────┼────────┤
│ 0                 │ a   │ 1      │
│ 1                 │ b   │ 2      │
└───────────────────┴─────┴────────┘
"
`;

exports[`inspect.table [ [ "a", 1 ], [ "b", 2 ] ] 1`] = `
"┌─────────┬───┬───┐
│ (index) │ 0 │ 1 │
├─────────┼───┼───┤
│ 0       │ a │ 1 │
│ 1       │ b │ 2 │
└─────────┴───┴───┘
"
`;

exports[`inspect.table Set(3) { 1, 2, 3 } 1`] = `
"┌───────────────────┬────────┐
│ (iteration index) │ Values │
├───────────────────┼────────┤
│ 0                 │ 1      │
│ 1                 │ 2      │
│ 2                 │ 3      │
└───────────────────┴────────┘
"
`;

exports[`inspect.table { "0": 1, "1": 2, "2": 3 } 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ 0       │ 1      │
│ 1       │ 2      │
│ 2       │ 3      │
└─────────┴────────┘
"
`;

exports[`inspect.table [ 1, 2, 3 ] 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ 0       │ 1      │
│ 1       │ 2      │
│ 2       │ 3      │
└─────────┴────────┘
"
`;

exports[`inspect.table [ "a", 1, "b", 2, "c", 3 ] 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ 0       │ a      │
│ 1       │ 1      │
│ 2       │ b      │
│ 3       │ 2      │
│ 4       │ c      │
│ 5       │ 3      │
└─────────┴────────┘
"
`;

exports[`inspect.table [ /a/, 1, /b/, 2, /c/, 3 ] 1`] = `
"┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ 0       │        │
│ 1       │ 1      │
│ 2       │        │
│ 3       │ 2      │
│ 4       │        │
│ 5       │ 3      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2 } 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ a       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ b       │ \x1B[0m\x1B[33m2\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2, c: 3 } 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ a       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ b       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ c       │ \x1B[0m\x1B[33m3\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2, c: 3, d: 4 } 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ a       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ b       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ c       │ \x1B[0m\x1B[33m3\x1B[0m      │
│ d       │ \x1B[0m\x1B[33m4\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) Map(2) { "a": 1, "b": 2 } 1`] = `
"┌───────────────────┬─────┬────────┐
│ \x1B[0m\x1B[1m(iteration index)\x1B[0m │ \x1B[0m\x1B[1mKey\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├───────────────────┼─────┼────────┤
│ 0                 │ a   │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 1                 │ b   │ \x1B[0m\x1B[33m2\x1B[0m      │
└───────────────────┴─────┴────────┘
"
`;

exports[`inspect.table (ansi) [ [ "a", 1 ], [ "b", 2 ] ] 1`] = `
"┌─────────┬───┬───┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1m0\x1B[0m │ \x1B[0m\x1B[1m1\x1B[0m │
├─────────┼───┼───┤
│ 0       │ a │ \x1B[0m\x1B[33m1\x1B[0m │
│ 1       │ b │ \x1B[0m\x1B[33m2\x1B[0m │
└─────────┴───┴───┘
"
`;

exports[`inspect.table (ansi) Set(3) { 1, 2, 3 } 1`] = `
"┌───────────────────┬────────┐
│ \x1B[0m\x1B[1m(iteration index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├───────────────────┼────────┤
│ 0                 │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 1                 │ \x1B[0m\x1B[33m2\x1B[0m      │
│ 2                 │ \x1B[0m\x1B[33m3\x1B[0m      │
└───────────────────┴────────┘
"
`;

exports[`inspect.table (ansi) { "0": 1, "1": 2, "2": 3 } 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ 0       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 1       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ 2       │ \x1B[0m\x1B[33m3\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) [ 1, 2, 3 ] 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ 0       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 1       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ 2       │ \x1B[0m\x1B[33m3\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) [ "a", 1, "b", 2, "c", 3 ] 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ 0       │ a      │
│ 1       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 2       │ b      │
│ 3       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ 4       │ c      │
│ 5       │ \x1B[0m\x1B[33m3\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (ansi) [ /a/, 1, /b/, 2, /c/, 3 ] 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ 0       │        │
│ 1       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ 2       │        │
│ 3       │ \x1B[0m\x1B[33m2\x1B[0m      │
│ 4       │        │
│ 5       │ \x1B[0m\x1B[33m3\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (with properties) { a: 1, b: 2 } 1`] = `
"┌─────────┬───┐
│ (index) │ b │
├─────────┼───┤
│ a       │   │
│ b       │   │
└─────────┴───┘
"
`;

exports[`inspect.table (with properties) { a: 1, b: 2 } 2`] = `
"┌─────────┬───┐
│ (index) │ a │
├─────────┼───┤
│ a       │   │
│ b       │   │
└─────────┴───┘
"
`;

exports[`inspect.table (with properties and colors) { a: 1, b: 2 } 1`] = `
"┌─────────┬───┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mb\x1B[0m │
├─────────┼───┤
│ a       │   │
│ b       │   │
└─────────┴───┘
"
`;

exports[`inspect.table (with properties and colors) { a: 1, b: 2 } 2`] = `
"┌─────────┬───┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1ma\x1B[0m │
├─────────┼───┤
│ a       │   │
│ b       │   │
└─────────┴───┘
"
`;

exports[`inspect.table (with colors in 2nd position) { a: 1, b: 2 } 1`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ a       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ b       │ \x1B[0m\x1B[33m2\x1B[0m      │
└─────────┴────────┘
"
`;

exports[`inspect.table (with colors in 2nd position) { a: 1, b: 2 } 2`] = `
"┌─────────┬────────┐
│ \x1B[0m\x1B[1m(index)\x1B[0m │ \x1B[0m\x1B[1mValues\x1B[0m │
├─────────┼────────┤
│ a       │ \x1B[0m\x1B[33m1\x1B[0m      │
│ b       │ \x1B[0m\x1B[33m2\x1B[0m      │
└─────────┴────────┘
"
`;
